[package]
name = "p2ptest"
version = "0.1.0"
authors = ["Paul Blouët <paul.blouet@outlook.com>"]
edition = "2018"

[features]
gui = ["druid"]
default = ["gui"]

[dependencies]
anyhow = "1.0.38"
async-std = "1.9.0"
env_logger = "0.8.2"
futures = "0.3.12"
libp2p = "0.34.0"

[dependencies.druid]
version = "0.7.0"
optional = true
